# rprop

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yml  test.yml
rose_architecture_macros/: Cargo.toml
rose_architecture_macros/src/: ast.rs  lib.rs  lower.rs  parse.rs
rose_architecture_macros/src/emit/: atomic.rs  conjunction.rs  disjunction.rs  implication.rs  mod.rs
rprop/: Cargo.toml
rprop/examples/kir_lowering/: lowering.rs  main.rs  props.rs
rprop/examples/nat_generics/: main.rs
rprop/examples/negation/: main.rs
rprop/examples/steamer/: components.rs  consumables.rs  main.rs  physics.rs  stages.rs
rprop/examples/tea_making/: main.rs
rprop/src/: lib.rs  lowering.rs  main.rs  props.rs
rprop_derive/: Cargo.toml  LICENSE-APACHE
rprop_derive/src/: ast.rs  generics.rs  keywords.rs  lib.rs  lower.rs  nat.rs  parse.rs
rprop_derive/src/emit/: atomic.rs  conjunction.rs  disjunction.rs  implication.rs  members.rs  mod.rs  proof.rs
rprop_macros/: Cargo.toml  LICENSE-MIT
rprop_macros/src/: ast.rs  lib.rs  lower.rs  parse.rs
rprop_macros/src/emit/: atomic.rs  conjunction.rs  disjunction.rs  implication.rs  members.rs  mod.rs  proof.rs
src/: facts.rs  framework.rs  lowering.rs  main.rs  props.rs
