[package]
name = "rprop_derive"
version = "0.2.2"
authors = ["Kaleb Bruwer <kaleb@karoocompute.com>"]
description = "Procedural macros for RProp"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kaleb-Bruwer/rprop"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
